--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=2000
-MONGO_DB_USER=root
-MONGO_DB_PASSWORD=admin
-MONGO_DB_DATABASE=ecommerce
-JWT_SECRET=MERNSECRET
+MONGO_DB_USER=
+MONGO_DB_PASSWORD=
+MONGO_DB_DATABASE=
+JWT_SECRET=
 API = http://localhost:2000
